--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -1,10 +1,9 @@
 header {
     position: fixed;
     width: 100%;
-    height: 3.5rem;
+    /* height: 3.5rem; */
     top: 0;
     overflow: hidden;
-    z-index: 1;
     background-color: #ffffff;
     box-shadow: 0px 2px 2px #e0dede;
 }
@@ -79,6 +78,7 @@ header {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        /* padding: 20px 0; */
     }
 
     .navbar-toggle {
