added styles and settings page

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: monospace;
 }
 
 :root {
@@ -11,8 +12,4 @@
 html,
 body {
     min-height: 100vh;
-}
-
-body {
-    font-family: 'Muli', sans-serif;
 }
