--- a/src/pages/Project.module.css
+++ b/src/pages/Project.module.css
@@ -8,33 +8,183 @@
     margin: 0 auto;
 }
 
-.form div {
-    padding-bottom: 1.5rem;
-}
-
 .form input {
     display: block;
     width: 100%;
     padding: 0.5rem;
+    border: none;
+    border-bottom: 1px solid #d6d3d3;
+    background-color: transparent;
 }
 
-.color input {
-    width: 10%;
+.form div {
+    padding-bottom: 1.5rem;
 }
 
 .label {
     display: block;
-    color: red;
+    font-weight: bold;
+    font-size: 14px;
     padding-bottom: 0.2rem;
+}
+
+.color_div input {
+    width: 1.5rem;
+    padding: 0;
+    border: 1px solid #d6d3d3;
+    border-radius: 4px;
+}
+
+input[type='color'] {
+    -webkit-appearance: none;
+}
+
+input[type='color']::-webkit-color-swatch-wrapper {
+    padding: 0;
+}
+
+input[type='color']::-webkit-color-swatch {
+    border: none;
+    border-radius: 4px;
 }
 
 .project select {
     padding: 0.5rem;
     width: 100%;
+    border: none;
+    border-bottom: 1px solid #d6d3d3;;
+    background-color: transparent;
 }
 
 .submit {
     width: 100%;
     display: block;
     padding: 0.5rem;
+    font-weight: bold;
+    border: none;
+    border-radius: 4px;
+}
+
+/* display of project */
+.project_list {
+    border: 1px solid #d6d3d3;
+    border-radius: 8px;
+    margin: 1rem 0;
+    padding: .5rem;
+}
+
+.project_name_heading, .parent_name_heading {
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: .5rem;
+}
+
+.project_content {
+    display: flex;
+    align-items: center;
+    margin: .5rem 0 1rem;
+}
+
+.color_box {
+    width: 1.5rem;
+    height: 1.5rem;
+    border: 1px solid #d6d3d3;
+    border-radius: 4px;
+}
+
+.project_name {
+    margin-left: .5rem;
+    text-transform: capitalize;
+}
+
+.project_list select {
+    padding: 0.5rem;
+    width: 100%;
+    border-radius: 4px;
+    background-color: transparent;
+}
+
+.action_buttons {
+    margin: 1rem;
+    display: flex;
+}
+
+.action_buttons button {
+    width: 100%;
+    display: block;
+    padding: 0.5rem;
+    margin: 0 .5rem;
+    font-weight: bold;
+    border-radius: 4px;
+    border: none;
+}
+
+@media screen and (min-width: 600px) {
+    .container {
+        width: 80%;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .form {
+        display: grid;
+        grid-template-columns: 5% 40% 25% 15%;
+        grid-gap: 5%;
+    }
+
+    .form div {
+        padding-bottom: 0;
+    }
+
+    .project select {
+        font-size: 15px;
+    }
+
+    .label {
+        padding-bottom: .5rem;
+        font-size: 18px;
+    }
+
+    .color_div input {
+        width: 2rem;
+        height: 2rem;
+    }
+
+    .submit {
+        padding: 0;
+        font-size: 15px;
+    }
+
+    /* display of project */
+    .project_list {
+        display: grid;
+        grid-template-columns: 20% 40% 40%;
+        margin: 3rem 5rem;
+        padding: 1rem;
+    }
+
+    .project_container, .parent_container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .project_name_heading, .parent_name_heading {
+        font-size: 18px;
+        margin-bottom: 1rem;
+    }
+
+    .color_box {
+        width: 2rem;
+        height: 2rem;
+    }
+
+    .project_name {
+        font-size: 18px;
+        margin-left: 1rem;
+    }
+
+    .action_buttons button {
+        font-size: 15px;
+    }
 }
