--- a/src/pages/Report.module.css
+++ b/src/pages/Report.module.css
@@ -1,4 +1,111 @@
 .report_main {
-    margin-top: 5rem;
-    color: #00ffff;
+    margin: 5rem 0 3rem;
+}
+
+.container {
+    width: 95%;
+    margin: 0 auto;
+}
+
+.chart_container {
+    margin-top: 1rem;
+    display: flex;
+    /* align-items: center; */
+}
+
+.piechart {
+    width: 50%;
+    margin-right: 1rem;
+}
+
+.chart_projects li {
+    list-style: none;
+    font-size: 14px;
+    padding-bottom: .5rem;
+    text-transform: capitalize;
+}
+
+.mini_report {
+    margin-top: 1rem;
+    border: 1px solid #d6d3d3;
+}
+
+.mini_heading {
+    background-color: #d6d3d3;
+}
+
+.mini_heading, .mini_report_data {
+    display: flex;
+    justify-content: space-between;
+    padding: .5rem;
+    border-bottom: 1px solid #d6d3d3;
+    text-transform: capitalize;
+}
+
+.total_time {
+    display: flex;
+    justify-content: space-between;
+    padding: .5rem;
+    font-weight: bold;
+    background-color: #d6d3d3;
+}
+
+.detailed_report {
+    display: none;
+}
+
+@media screen and (min-width: 600px) {
+    .container {
+        width: 80%;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .container {
+        width: 75%;
+        margin: 0 auto;
+    }
+
+    .chart_container {
+        margin-top: 2rem;
+    }
+    
+    .piechart {
+        width: 30%;
+        margin-right: 1rem;
+    }
+
+    .chart_projects li {
+        font-size: 18px;
+        padding-bottom: 1rem;
+    }
+
+    .mini_report {
+        margin-top: 2rem;
+    }
+
+    .detailed_report {
+        display: block;
+        margin-top: 3rem;
+        border: 1px solid #d6d3d3;
+    }
+
+    .report_button {
+        display: block;
+        margin-top: 3rem;
+    }
+
+    .detailed_heading {
+        background-color: #d6d3d3;
+    }
+
+    .detailed_heading, .detailed_report_data {
+        display: grid;
+        grid-template-columns: 10% 5% 5% 10% 10% 50%;
+        grid-column-gap: 5%;
+        padding: .5rem;
+        border-bottom: 1px solid #d6d3d3;
+        text-transform: capitalize;
+    }
 }
