--- a/src/pages/Report.module.css
+++ b/src/pages/Report.module.css
@@ -10,7 +10,22 @@
 .chart_container {
     margin-top: 1rem;
     display: flex;
-    /* align-items: center; */
+}
+
+.sort {
+    display: flex;
+    width: 80%;
+    margin-top: .5rem;
+}
+
+.sort_btns {
+    width: 100%;
+    display: block;
+    padding: .5rem;
+    margin: 0 .5rem;
+    border: 1px solid #d6d3d3;
+    border-radius: 4px;
+    text-transform: capitalize;
 }
 
 .piechart {
@@ -73,6 +88,10 @@
 
     .chart_container {
         margin-top: 2rem;
+    }
+
+    .sort {
+        width: 30%;
     }
     
     .piechart {
